fix/lang-selection-descritpion (#37)
* align passing lang for manufacturer and content

* align passing lang for type

* align passing lang for categories

* align passing lang for products

* align passing lang for products

* remove lang from ui

* align passing lang for products

* align passing lang for products

* align passing lang for products

* align passing lang for products